# neug

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  dev_and_test.md  neug-config.in.cmake
examples/cpp/: CMakeLists.txt
extension/: CMakeLists.txt
extension/json/: CMakeLists.txt
extension/json/tests/: json_test.cpp
extension/parquet/: CMakeLists.txt
extension/parquet/tests/: parquet_test.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/compiler/binder/: CMakeLists.txt  expression_visitor.cpp
src/compiler/binder/bind/: CMakeLists.txt  bind_ddl.cpp  bind_file_scan.cpp  bind_graph_pattern.cpp  bind_updating_clause.cpp
src/compiler/binder/bind_expression/: CMakeLists.txt  bind_property_expression.cpp
src/compiler/binder/ddl/: CMakeLists.txt
src/compiler/binder/expression/: CMakeLists.txt
src/compiler/binder/query/: CMakeLists.txt
src/compiler/binder/rewriter/: CMakeLists.txt
src/compiler/binder/visitor/: CMakeLists.txt
src/compiler/catalog/: CMakeLists.txt  catalog_set.cpp
src/compiler/catalog/catalog_entry/: CMakeLists.txt
src/compiler/common/: CMakeLists.txt
src/compiler/common/arrow/: CMakeLists.txt
src/compiler/common/copier_config/: CMakeLists.txt
src/compiler/common/data_chunk/: CMakeLists.txt
src/compiler/common/enums/: CMakeLists.txt  rel_multiplicity.cpp
src/compiler/common/task_system/: CMakeLists.txt
src/compiler/extension/: CMakeLists.txt
src/compiler/function/: CMakeLists.txt  function_collection.cpp  json_export_function.cc
src/compiler/function/aggregate/: CMakeLists.txt
src/compiler/function/arithmetic/: CMakeLists.txt
src/compiler/function/cast/: CMakeLists.txt
src/compiler/function/gds/: CMakeLists.txt
src/compiler/function/list/: CMakeLists.txt
src/compiler/function/path/: CMakeLists.txt
src/compiler/function/pattern/: CMakeLists.txt
src/compiler/function/struct/: CMakeLists.txt
src/compiler/function/table/: CMakeLists.txt  bind_data.cpp
src/compiler/gopt/: CMakeLists.txt  g_alias_manager.cpp  g_ddl_converter.cpp  g_expr_converter.cpp  g_precedence.cpp  g_query_converter.cpp
src/compiler/graph/: CMakeLists.txt
src/compiler/main/: CMakeLists.txt  client_context.cpp  prepared_statement.cpp
src/compiler/optimizer/: CMakeLists.txt  filter_push_down_pattern.cpp  optimizer.cpp  project_into_data_source_optimizer.cpp  projection_push_down_optimizer.cpp
src/compiler/parser/: CMakeLists.txt
src/compiler/parser/antlr_parser/: CMakeLists.txt
src/compiler/parser/expression/: CMakeLists.txt
src/compiler/parser/transform/: CMakeLists.txt  transform_ddl.cpp
src/compiler/parser/visitor/: CMakeLists.txt
src/compiler/planner/: CMakeLists.txt  gopt_planner.cc
src/compiler/planner/join_order/: CMakeLists.txt
src/compiler/planner/operator/: CMakeLists.txt  logical_table_function_call.cpp
src/compiler/planner/plan/: CMakeLists.txt  append_simple.cpp  append_table_function_call.cpp  plan_copy.cpp  plan_projection.cpp  plan_subquery.cpp
src/compiler/transaction/: CMakeLists.txt
src/execution/: CMakeLists.txt
src/execution/common/columns/: arrow_context_column.cc  columns_utils.cc  list_columns.cc
src/execution/common/types/: value.cc
src/execution/execute/: plan_parser.cc
src/execution/expression/: expr.cc
src/execution/expression/accessors/: edge_accessor.cc  record_accessor.cc  vertex_accessor.cc
src/execution/expression/exprs/: arith_expr.cc  extract_expr.cc  logical_expr.cc  path_expr.cc  struct_expr.cc  variable.cc
src/execution/extension/: extension.cc
src/execution/utils/: pb_parse_utils.cc
src/main/: CMakeLists.txt  connection.cc  connection_manager.cc  neug_db.cc  query_processor.cc  query_result.cc
src/server/: CMakeLists.txt  neug_db_service.cc  neug_db_session.cc
src/storages/: CMakeLists.txt
src/storages/column/: CMakeLists.txt  anon_mmap_container.cc  file_mmap_container.cc  i_container.cc  mmap_container.cc
src/storages/container/: CMakeLists.txt  anon_mmap_container.cc  container_utils.cc  file_mmap_container.cc  i_container.cc  mmap_container.cc
src/storages/csr/: CMakeLists.txt  generic_view_utils.cc  immutable_csr.cc  mutable_csr.cc
src/storages/graph/: CMakeLists.txt  checkpoint.cc  edge_table.cc  edge_table_view.cc  graph_interface.cc  graph_view.cc  module_descriptor.cc  operation_params.cc  property_graph.cc  schema.cc  snapshot_meta.cc  snapshot_store.cc  vertex_table.cc  vertex_table_view.cc  vertex_timestamp.cc  workspace.cc
src/storages/loader/: CMakeLists.txt  abstract_property_graph_loader.cc  loader_factory.cc  loader_utils.cc  loading_config.cc
src/storages/module/: CMakeLists.txt  module_factory.cc  module_store.cc
src/transaction/: CMakeLists.txt  compact_transaction.cc  insert_transaction.cc  read_transaction.cc  undo_log.cc  update_transaction.cc  version_manager.cc
src/transaction/wal/: local_wal_parser.cc  local_wal_writer.cc  wal.cc
src/utils/: CMakeLists.txt  file_utils.cc  id_indexer.cc  lf_indexer.cc  pb_utils.cc  uuid.cc  yaml_utils.cc
src/utils/exception/: exception.cc
src/utils/property/: column.cc  property.cc  table.cc  table_view.cc  types.cc
src/utils/reader/: json_dataset_builder.cc  json_options.cc  options.cc  reader.cc
tests/test_cpp_installation/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  indexer_test.cc  logical_delete_test.cc  schema_test.cc  test_column.cc  test_db_svc.cc  test_extension.cc  test_indexer.cc  test_mmap_container.cc  utils.h
tools/python_bind/: CMakeCache.txt  CMakeLists.txt  README.md  pyproject.toml  requirements_dev.txt  setup.py
tools/python_bind/example/: complex_test.py
tools/python_bind/neug/: database.py  neug_cli.py  query_result.py
tools/python_bind/src/: py_database.cc  py_query_result.cc  py_query_result.h
tools/python_bind/tests/: conftest.py  test_db_import_export.py  test_db_init.py  test_db_list.py  test_db_query.py  test_db_transaction.py  test_ddl.py  test_export.py  test_load.py  test_lsqb.py  test_merge.py  test_sniffer.py  test_to_arrow.py  test_tp_service.py
tools/utils/: CMakeLists.txt  bulk_loader.cc
(+271 files in other folders)
